Fxi Global Function Validator
